<resources>
    <string name="app_name">Quick Reddit</string>
    <string name="search_hint">Search</string>
    <string name="search_subreddits_hint">Search for Subreddits</string>
    <string name="saved_subreddits">Saved Subreddits</string>
    <string name="settings">Settings</string>
    <string name="pref_sort_order_new_value">sort_new</string>
    <string name="pref_sort_order_new_label">New</string>
    <string name="pref_sort_order_hot_value">sort_hot</string>
    <string name="pref_sort_order_hot_label">Hot</string>
    <string name="pref_sort_order_label">Sort order</string>
    <string name="pref_sort_order_key">sort</string>
    <string name="open_media_link">Open Media Link</string>
    <string name="share_thread">Share Thread</string>
    <string name="share_message">Check out this Reddit thread:\n </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="open_reddit_thread">Open Reddit Thread</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="error_fetching_data">Error fetching data.</string>
    <string name="comments">Comments</string>
    <string name="no_comments_available">No Comments Available</string>
    <string name="no_link">No Link</string>
    <string name="thumbnail_transition">Image Transition Thumbnail</string>
    <string name="trending_subreddits">Trending Subreddits</string>
    <string name="details">Details</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="display_trending_subreddits">Display Trending Subreddits</string>
    <string name="subreddit_saved">Subreddit Saved</string>
    <string name="subreddit_removed">Subreddit Removed</string>
    <string name="no_subreddits_saved">No Saved Subreddits. \nStart adding by searching or by viewing trending subreddits</string>
    <string name="add_subreddits">Add Subreddits</string>
    <string name="no_subreddits_saved_main">No Saved Subreddits. Start adding using the overflow menu.</string>
    <string name="clear_saved_subreddits">Clear saved subreddits</string>
    <string name="clear_saved_subreddits_button">clear_subreddits</string>
    <string name="clear_confirmation">Clear all the saved subreddits?</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="subreddits_deleted">Subreddits Deleted</string>
    <string name="image_from_thread">Image From Thread</string>
    <string name="star_icon_for_subreddit">Star Indicator for Save status of Subreddit</string>
    <string name="reload_button_for_widget">Reload Button for Widget</string>
</resources>
