<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share_thread"
        android:id="@+id/menu_share_thread_action"/>

    <item
        android:orderInCategory="2"
        app:showAsAction="always"
        android:icon="@drawable/ic_video_library_white_24dp"
        android:title="@string/open_media_link"
        android:id="@+id/menu_open_external_link_action"
        />
    <item
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_open_in_new_white_24dp"
        android:title="@string/open_reddit_thread"
        android:id="@+id/menu_open_reddit_thread_action"
        />
</menu>